--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "seed:dev": "nodemon ./db/seed.js"
+    "seed:dev": "nodemon ./db/seed.js",
+    "start": "node index.js",
+    "start:dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +19,8 @@
   },
   "homepage": "https://github.com/amandaltang13/juicebox#readme",
   "dependencies": {
+    "express": "^4.18.2",
+    "morgan": "^1.10.0",
     "pg": "^8.8.0"
   },
   "devDependencies": {
